@@ -1,4 +1,8 @@
 User johns
+Date Thu May 27 16:09:44 CEST 2010
+
+    Added support to run on any X11 screen.
+
 Date Thu May 20 10:09:10 CEST 2010
 
     Version 1.0 released.
